--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -135,9 +135,9 @@
       <!-- end Skills -->
       {% endif %}
 
-      {% if site.resume_section_recognition %}
+      <!-- {% if site.resume_section_recognition %} -->
       <!-- begin Recognition -->
-      <section class="content-section">
+      <!-- <section class="content-section">
 
         <header class="section-header">
           <h2>Recognition</h2>
@@ -151,9 +151,9 @@
         </div>
         {% endfor %}
 
-      </section>
+      </section> -->
       <!-- end Recognition -->
-      {% endif %}
+      <!-- {% endif %} -->
 
       <!-- {% if site.resume_section_associations %} -->
       <!-- begin Associations -->
@@ -175,9 +175,9 @@
       <!-- end Associations -->
       <!-- {% endif %} -->
 
-      {% if site.resume_section_interests %}
+      <!-- {% if site.resume_section_interests %} -->
       <!-- begin Interests -->
-      <section class="content-section">
+      <!-- <section class="content-section">
 
         <header class="section-header">
           <h2>Outside Interests</h2>
@@ -191,13 +191,13 @@
           </ul>
         </div>
 
-      </section>
+      </section> -->
       <!-- end Interests -->
-      {% endif %}
+      <!-- {% endif %} -->
 
-      {% if site.resume_section_links %}
+      <!-- {% if site.resume_section_links %} -->
       <!-- begin Links -->
-      <section class="content-section">
+      <!-- <section class="content-section">
 
         <header class="section-header">
           <h2>Additional Links</h2>
@@ -211,13 +211,13 @@
           </ul>
         </div>
 
-      </section>
+      </section> -->
       <!-- end Links -->
-      {% endif %}
+      <!-- {% endif %} -->
 
-      {% if site.resume_print_social_links %}
+      <!-- {% if site.resume_print_social_links %} -->
       <!-- begin Print Social Links -->
-      <section class="content-section print-only">
+      <!-- <section class="content-section print-only">
 
         <header class="section-header">
           <h2>Social Links</h2>
@@ -227,13 +227,13 @@
         {% include print-social-links.html %}
         </div>
 
-      </section>
+      </section> -->
       <!-- end Print Social Links -->
-      {% endif %}
+      <!-- {% endif %} -->
 
       <footer class="page-footer">
-        <p class="footer-line">Made by <a href="http://twitter.com/jglovier">@jglovier</a>. Fork me on <a href="https://github.com/jglovier/resume-template">GitHub</a>.</p>
-        <p class="footer-line">If this is your live resume, you can modify or remove this part. ;-)</p>
+        <p class="footer-line">在线工具箱 <a href="http://123.60.185.233/#/">@P_P</a>. Fork me on <a href="https://gitee.com/su-panpan0419">Gitee</a>.</p>
+        <!-- <p class="footer-line">If this is your live resume, you can modify or remove this part. ;-)</p> -->
       </footer>
 
     </div>
