--- a/_includes/icon-links.html
+++ b/_includes/icon-links.html
@@ -6,43 +6,45 @@
   {% if site.resume_social_links.resume_github_url %}
   <li class="icon-link-item"><a href="{{ site.resume_social_links.resume_github_url }}" class="icon-link" itemprop="sameAs">{% include icons/icon-github.html %}</a></li>
   {% endif %}
-
-  <!-- Twitter link -->
-  {% if site.resume_social_links.resume_twitter_url %}
-  <li class="icon-link-item"><a href="{{ site.resume_social_links.resume_twitter_url }}" class="icon-link" itemprop="sameAs">{% include icons/icon-twitter.html %}</a></li>
+  <!-- gitee link -->
+  {% if site.resume_social_links.resume_gitee_url %}
+  <li class="icon-link-item"><a href="{{ site.resume_social_links.resume_gitee_url }}" class="icon-link" itemprop="url">{% include icons/icon-gitee.html %}</a></li>
   {% endif %}
+ <!-- Website link -->
+ {% if site.resume_social_links.resume_website_url %}
+ <li class="icon-link-item"><a href="{{ site.resume_social_links.resume_website_url }}" class="icon-link" itemprop="url">{% include icons/icon-website.html %}</a></li>
+ {% endif %}
+  <!-- Twitter link -->
+  <!-- {% if site.resume_social_links.resume_twitter_url %}
+  <li class="icon-link-item"><a href="{{ site.resume_social_links.resume_twitter_url }}" class="icon-link" itemprop="sameAs">{% include icons/icon-twitter.html %}</a></li>
+  {% endif %} -->
   
   <!-- Medium link -->
-  {% if site.resume_social_links.resume_medium_url %}
+  <!-- {% if site.resume_social_links.resume_medium_url %}
   <li class="icon-link-item">
     <a href="{{ site.resume_social_links.resume_medium_url }}" class="icon-link" itemprop="url">{% include icons/icon-medium.html %}</a>
   </li>
-  {% endif %}
+  {% endif %} -->
 
   <!-- Dribbble link -->
-  {% if site.resume_social_links.resume_dribbble_url %}
+  <!-- {% if site.resume_social_links.resume_dribbble_url %}
   <li class="icon-link-item"><a href="{{ site.resume_social_links.resume_dribbble_url }}" class="icon-link" itemprop="sameAs">{% include icons/icon-dribbble.html %}</a></li>
-  {% endif %}
+  {% endif %} -->
 
   <!-- Facebook link -->
-  {% if site.resume_social_links.resume_facebook_url %}
+  <!-- {% if site.resume_social_links.resume_facebook_url %}
   <li class="icon-link-item"><a href="{{ site.resume_social_links.resume_facebook_url }}" class="icon-link" itemprop="sameAs">{% include icons/icon-facebook.html %}</a></li>
-  {% endif %}
+  {% endif %} -->
 
   <!-- LinkedIn link -->
-  {% if site.resume_social_links.resume_linkedin_url %}
+  <!-- {% if site.resume_social_links.resume_linkedin_url %}
   <li class="icon-link-item"><a href="{{ site.resume_social_links.resume_linkedin_url }}" class="icon-link" itemprop="sameAs">{% include icons/icon-linkedin.html %}</a></li>
-  {% endif %}
+  {% endif %} -->
 
   <!-- Instagram link -->
-  {% if site.resume_social_links.resume_instagram_url %}
+  <!-- {% if site.resume_social_links.resume_instagram_url %}
   <li class="icon-link-item"><a href="{{ site.resume_social_links.resume_instagram_url }}" class="icon-link" itemprop="sameAs">{% include icons/icon-instagram.html %}</a></li>
-  {% endif %}
-
-  <!-- Website link -->
-  {% if site.resume_social_links.resume_website_url %}
-  <li class="icon-link-item"><a href="{{ site.resume_social_links.resume_website_url }}" class="icon-link" itemprop="url">{% include icons/icon-website.html %}</a></li>
-  {% endif %}
+  {% endif %} -->
 
 </ul>
 {% endif %}
